tests/error/linear_errors/call_drop_field.err
Error: Drop violation (at $FILE:18:11)
   | 
16 | @guppy
17 | def bar() -> qubit:
18 |     return foo().q1
   |            ^^^^^ Non-droppable field `q2` of expression with type `MyStruct`
   |                  is leaked

Help: Consider assigning this value to a local variable before accessing the
field `q1`

Guppy compilation failed due to 1 previous error
